improve the code for launching the pdnsd daemon